--- a/starter-code/views/layout.hbs
+++ b/starter-code/views/layout.hbs
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 <body>
+  <nav>
+    <a href="/">home</a>
+    <a href="/signup"> signup </a>
+  </nav>
 
   {{{body}}}
 
